--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,17 +7,8 @@
     "paths": {
       "@/*": ["src/*"],
       "public/*": ["public/*"]
-    }
-    // "strict": true,
-    // "target": "esnext",
-    // "module": "nodenext",
-    // "moduleResolution": "nodenext",
-    // "esModuleInterop": true,
-    // "forceConsistentCasingInFileNames": true,
-    // "skipLibCheck": true,
-    // "allowJs": true,
-    // "resolveJsonModule": true,
-    // "isolatedModules": true,
-    // "noEmit": true
+    },
+    "jsx": "react-jsx",
+    "jsxImportSource": "react"
   }
 }
