--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "predeploy": "astro build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@astrojs/react": "^4.3.0",
@@ -26,6 +28,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.10",
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "katex": "^0.16.22",
     "postcss": "^8.5.5",
     "prettier": "^3.5.3",
